[package]
authors = ["Shohei Jinno <shohei.jinno@gmail.com>"]
edition = "2018"
name = "hebi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# perf-event = "0.4.6"
rand = "0.8.3"
termion = "1.5.6"

[profile.release]
debug = true
